Progress: > Read JSON file correctly using AsyncTask > Display course content with good design with ArrayAdapter class

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="LinearLayout">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:background">#0C0C0C</item>
+  </style>
+
 </resources>
