--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  tools:context=".MainActivity"
-  style="@style/LinearLayout">
+  tools:context=".View.MainActivity"
+  style="@style/LinearLayout"
+  android:orientation="vertical"
+  android:layout_height="match_parent"
+  android:layout_width="match_parent">
 
-  <ListView
-    android:id="@+id/customListView"
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="2dp"
+    android:layout_height="wrap_content"
+    android:background="#2e2e2e"
+    app:title="CourseHelper"
+    app:titleTextColor="#029891"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <com.google.android.material.tabs.TabLayout
+    android:id="@+id/tablayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#2e2e2e"
+    app:tabIndicatorColor="@android:color/holo_purple"
+    app:tabTextColor="#029891"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
+
+    <com.google.android.material.tabs.TabItem
+      android:id="@+id/coursesTab"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Courses" />
+
+    <com.google.android.material.tabs.TabItem
+      android:id="@+id/scheduleTab"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Schedule" />
+  </com.google.android.material.tabs.TabLayout>
+
+  <androidx.viewpager.widget.ViewPager
+    android:id="@+id/viewPager"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
+</LinearLayout>
 
 
