--- a/app/src/main/res/layout/course_layout2.xml
+++ b/app/src/main/res/layout/course_layout2.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/courseItem"
   android:weightSum="1"
   android:orientation="horizontal" android:layout_width="match_parent"
   android:layout_height="wrap_content"
