--- a/app/src/main/res/layout/course_layout2.xml
+++ b/app/src/main/res/layout/course_layout2.xml
@@ -1,62 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/courseItem"
-  android:weightSum="1"
-  android:orientation="horizontal" android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_margin="8dp"
-  android:background="#2e2e2e">
-
-  <LinearLayout
-    android:layout_weight="0.6"
-    android:weightSum="1"
-    android:layout_width="0dp"
+    android:id="@+id/courseItem"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="8dp"
+    android:background="#2e2e2e"
+    android:orientation="horizontal"
+    android:weightSum="1">
 
-    <TextView
-      android:id="@+id/title"
-      android:layout_weight="0.6"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_marginLeft="5dp"
-      android:layout_marginTop="5dp"
-      android:layout_marginRight="5dp"
-      android:text="aaaaaaaaaa"
-      android:textSize="16dp"
-      android:fontFamily="sans-serif-medium"
-      android:textColor="#DDDDDD"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.6"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-    <TextView
-      android:id="@+id/credit"
-      android:layout_weight="0.4"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_marginLeft="5dp"
-      android:layout_marginRight="5dp"
-      android:layout_marginBottom="5dp"
-      android:text="3.0"
-      android:textSize="14dp"
-      android:fontFamily="sans-serif-medium"
-      android:textColor="#029891"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.6"
+            android:fontFamily="sans-serif-medium"
+            android:text="aaaaaaaaaa"
+            android:textColor="#DDDDDD"
+            android:textSize="16dp" />
 
-  </LinearLayout>
+        <TextView
+            android:id="@+id/credit"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="0.4"
+            android:fontFamily="sans-serif-medium"
+            android:text="3.0"
+            android:textColor="#029891"
+            android:textSize="14dp" />
 
-  <LinearLayout
-    android:layout_weight="0.4"
-    android:layout_width="0dp"
-    android:layout_height="match_parent">
-    <TextView
-      android:id="@+id/timeContent"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_margin="5dp"
-      android:text="MWF 06:10 AM-7:10 AM\nMWF 06:10 AM-7:10 AM"
-      android:textSize="12dp"
-      android:fontFamily="sans-serif"
-      android:textColor="#DDDDDD"/>
-  </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.4">
+
+        <TextView
+            android:id="@+id/timeContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:fontFamily="sans-serif"
+            android:text="MWF 06:10 AM-7:10 AM\nMWF 06:10 AM-7:10 AM"
+            android:textColor="#DDDDDD"
+            android:textSize="12dp" />
+    </LinearLayout>
 
 </LinearLayout>
