--- a/app/src/main/res/drawable/gradient_shore.xml
+++ b/app/src/main/res/drawable/gradient_shore.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
   <gradient
-    android:startColor="#3075ff"
-    android:endColor="#2631ff"
-    android:angle="180" />
+      android:type="radial"
+      android:gradientRadius="400%p"
+      android:startColor="#ffffff"
+      android:endColor="#CDFA9F"/>
 </shape>
