--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="#F6F8FA"
     android:orientation="vertical"
     tools:context=".View.CoursesFragment">
 
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@color/colorPrimaryText"
+        android:background="@android:color/white"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -38,8 +38,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:divider="@android:color/transparent"
-        android:dividerHeight="2dp"
+        android:dividerHeight="10dp"
         tools:layout_editor_absoluteX="5dp" />
 
 </LinearLayout>
