--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".View.ScheduleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <!-- graph start from here -->
+    <include
+        android:id="@+id/dayGraph"
+        layout="@layout/graph_layout"/>
 
 </FrameLayout>
