Schedule Graph Changes: > User can visualize their pre schedule courses on Schedule tab. > Course that has two class in a day, would be display correctly as well.
Changes on Model:
> some of the courses has two class in a day, so changed the attribute of EnumMap<DayOfWeek, Hours> to <DayOfWeek, List<Hours>>.

--- a/app/src/main/res/layout/dayofweek_schedule_layout.xml
+++ b/app/src/main/res/layout/dayofweek_schedule_layout.xml
@@ -18,31 +18,10 @@
         android:layout_height="2dp"
         android:background="#e8e8e8"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/timeCol"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@drawable/course_cell"
-            android:text="Microprocessor"
-            android:textColor="@android:color/white"
-            android:fontFamily="sans-serif-condensed-light"/>
-
-        <androidx.legacy.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="120dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="@drawable/course_cell"
-            android:text="Biology Lab"
-            android:textColor="@android:color/white"
-            android:fontFamily="sans-serif-condensed-light"/>
-    </LinearLayout>
+        android:layout_height="wrap_content">
+    </RelativeLayout>
 
 </LinearLayout>
