--- a/app/src/main/res/layout/course_layout2.xml
+++ b/app/src/main/res/layout/course_layout2.xml
@@ -8,7 +8,8 @@
     android:layout_marginRight="4dp"
     android:background="@drawable/roundedcorner"
     android:elevation="1dp"
-    android:padding="3dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="3dp"
     android:orientation="horizontal"
     android:weightSum="1">
 
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.6"
         android:orientation="vertical"
+        android:padding="3dp"
         android:weightSum="1">
 
         <TextView
@@ -26,24 +28,46 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="0.6"
+            android:layout_weight="0.67"
             android:fontFamily="sans-serif-medium"
             android:text="aaaaaaaaaa"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="15dp" />
 
-        <TextView
-            android:id="@+id/credit"
+        <LinearLayout
+            android:weightSum="1"
+            android:layout_weight="0.5"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="0.4"
-            android:fontFamily="sans-serif-medium"
-            android:text="3.0"
-            android:textColor="#029891"
-            android:textSize="14dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/credit"
+                android:layout_weight="0.5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="3.0"
+                android:textColor="#029891"
+                android:textSize="14dp" />
+            <TextView
+                android:id="@+id/cancelled"
+                android:layout_weight="0.5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:paddingBottom="2dp"
+                android:gravity="right"
+                android:fontFamily="sans-serif"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="14dp" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
