--- a/app/src/main/res/drawable/roundedcorner.xml
+++ b/app/src/main/res/drawable/roundedcorner.xml
@@ -2,5 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#ffffff" />
-    <corners android:radius="5dp" />
+    <corners
+        android:radius="2dp"
+        android:bottomRightRadius="8dp"
+        android:bottomLeftRadius="0dp"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="8dp"/>
 </shape>
