--- a/app/src/main/res/layout/course_layout2.xml
+++ b/app/src/main/res/layout/course_layout2.xml
@@ -3,73 +3,82 @@
     android:id="@+id/courseItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:translationZ="10dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:background="@drawable/roundedcorner"
     android:elevation="1dp"
-    android:paddingTop="1dp"
-    android:paddingBottom="3dp"
-    android:orientation="horizontal"
+    android:translationZ="10dp"
     android:weightSum="1">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.6"
-        android:orientation="vertical"
-        android:padding="3dp"
-        android:weightSum="1">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="0.67"
-            android:fontFamily="sans-serif-medium"
-            android:text="aaaaaaaaaa"
-            android:textColor="@android:color/black"
-            android:textSize="15dp" />
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_blue_light" />
 
         <LinearLayout
-            android:weightSum="1"
-            android:layout_weight="0.5"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.6"
+            android:orientation="vertical"
+            android:padding="3dp"
+            android:weightSum="1">
 
             <TextView
-                android:id="@+id/credit"
-                android:layout_weight="0.5"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_weight="0.65"
                 android:fontFamily="sans-serif-medium"
-                android:text="3.0"
-                android:textColor="#029891"
-                android:textSize="14dp" />
-            <TextView
-                android:id="@+id/cancelled"
+                android:text="aaaaaaaaaa"
+                android:textColor="@android:color/black"
+                android:textSize="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="0.5"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:paddingBottom="2dp"
-                android:gravity="right"
-                android:fontFamily="sans-serif"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="14dp" />
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/credit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="0.5"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="3.0"
+                    android:textColor="#029891"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/cancelled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="0.5"
+                    android:fontFamily="sans-serif"
+                    android:gravity="right"
+                    android:paddingBottom="2dp"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="14dp" />
+            </LinearLayout>
         </LinearLayout>
-
-
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="0dp"
