Refactor code for better readability

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -18,10 +18,10 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_feedback"
                 android:title="Feedback" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_ratemyprofessor"
                 android:title="Rate My Professor" />
         </menu>
     </item>
