--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,50 +10,22 @@
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
     <LinearLayout
         style="@style/LinearLayout"
+        android:id="@+id/mainContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#2e2e2e"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title="CourseHelper"
-            app:titleTextColor="@android:color/white" />
+        <include
+            layout="@layout/toolbar_main"
+            android:id="@+id/toolbar" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:background="#2e2e2e"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:tabIndicatorColor="@android:color/holo_blue_dark"
-            app:tabTextColor="@android:color/white">
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </FrameLayout>
 
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/coursesTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Courses" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/scheduleTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Schedule" />
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
