--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="ToolbarColoredHamburger" parent="AppTheme">
+    <item name="android:textColorSecondary">#ffffff</item>
+  </style>
+
   <style name="LinearLayout">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">match_parent</item>
