Implement fragment navigation: > Now user can press the home logo on toolbar to navigate back to main tab page > created Feedback fragment

--- a/app/src/main/res/layout/course_layout_simple.xml
+++ b/app/src/main/res/layout/course_layout_simple.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <View
+            android:id="@+id/colorCode"
             android:layout_width="3dp"
             android:layout_height="match_parent"
             android:background="@android:color/holo_blue_light" />
