--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -51,11 +51,13 @@
             android:id="@+id/feedbackMessage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:gravity="top|left"
             android:background="@drawable/border"
             android:inputType="text|textMultiLine" />
     </LinearLayout>
 
     <Button
+        android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -64,6 +66,4 @@
         android:text="send"
         android:textColor="@android:color/white"
         android:background="@drawable/course_cell" />
-
-
 </LinearLayout>
