--- a/app/src/main/res/layout/course_layout_simple.xml
+++ b/app/src/main/res/layout/course_layout_simple.xml
@@ -27,26 +27,24 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.6"
             android:orientation="vertical"
-            android:padding="3dp"
-            android:weightSum="1">
+            android:padding="3dp">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_weight="0.65"
+                android:gravity="center_vertical"
                 android:fontFamily="sans-serif-medium"
-                android:text="aaaaaaaaaa"
+                android:text="AAAAAAAAAAAAAAAA"
                 android:textColor="@android:color/black"
                 android:textSize="15dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.5"
+                android:layout_height="25dp"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
@@ -80,10 +78,10 @@
         </LinearLayout>
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:paddingTop="4dp"
         android:layout_weight="0.4">
 
         <TextView
