--- a/app/src/main/res/layout/dialog_course_description.xml
+++ b/app/src/main/res/layout/dialog_course_description.xml
@@ -183,6 +183,7 @@
             android:layout_weight="0.4">
 
             <TextView
+                android:id="@+id/coresTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.1"
@@ -196,7 +197,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.4"
                 android:gravity="center|left"
-                android:text="None"
                 android:textColor="@color/colorDialogDynamicText" />
         </LinearLayout>
     </LinearLayout>
@@ -221,7 +221,7 @@
             android:textColor="@color/colorPrimaryText" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@drawable/border">
