--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
 
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
     <LinearLayout
-        style="@style/LinearLayout"
         android:id="@+id/mainContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,16 +16,17 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/toolbar"
             layout="@layout/toolbar_main"
-            android:id="@+id/toolbar" />
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
 
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </FrameLayout>
-
+            android:layout_height="match_parent" />
     </LinearLayout>
+
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
     <com.google.android.material.navigation.NavigationView
@@ -37,7 +37,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/main_menu">
-
 
     </com.google.android.material.navigation.NavigationView>
 
