--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.FeedbackFragment">
+    tools:context="org.tomoaki.coursehelper.View.FeedbackFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
