--- a/app/src/main/res/layout/tab_main.xml
+++ b/app/src/main/res/layout/tab_main.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:weightSum="10">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.65"
         android:background="#2e2e2e"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:tabIndicatorColor="@android:color/holo_blue_dark"
         app:tabTextColor="@android:color/white">
 
@@ -31,9 +30,11 @@
             android:text="Schedule" />
     </com.google.android.material.tabs.TabLayout>
 
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="0dp"
+        android:layout_weight="9.35"
+        app:layout_anchorGravity="top|center" />
 </LinearLayout>
