--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#F6F8FA"
     android:orientation="vertical"
-    tools:context=".View.CoursesFragment">
+    tools:context="org.tomoaki.coursehelper.View.CoursesFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout"
