--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -2,15 +2,25 @@
 <LinearLayout
     android:id="@+id/bottom_sheet_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:background="@drawable/top_round_corner"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <ListView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="course in your schedule"
+        android:fontFamily="sans-serif-condensed-light"
+        android:layout_gravity="center"
+        android:textSize="30sp"/>
+
+    <org.tomoaki.coursehelper.Model.BottomSheetListView
         android:id="@+id/bottomSheetListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="350dp"
         android:dividerHeight="10dp" />
 </LinearLayout>
