--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -1,62 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F6F8FA"
-    android:orientation="vertical"
-    tools:context="org.tomoaki.coursehelper.View.CoursesFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="#F6F8FA"
+        android:orientation="vertical"
+        tools:context="org.tomoaki.coursehelper.View.CoursesFragment">
 
-        <!--  TODO: make spinner here for filtering feature  -->
-        <Spinner
-            android:id="@+id/coreSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="3dp"
-            android:layout_weight="0.33" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <Spinner
-            android:id="@+id/subjectSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="3dp"
-            android:layout_weight="0.33" />
+            <!--  TODO: make spinner here for filtering feature  -->
+            <Spinner
+                android:id="@+id/coreSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="0.33" />
 
-        <Spinner
-            android:id="@+id/specialSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="3dp"
-            android:layout_weight="0.33" />
+            <Spinner
+                android:id="@+id/subjectSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="0.33" />
+
+            <Spinner
+                android:id="@+id/specialSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="0.33" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="200dp"
+            android:layout_gravity="center" />
+
+        <ListView
+            android:id="@+id/customListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="50dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"
+            tools:layout_editor_absoluteX="5dp" />
+
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="200dp"
-        android:layout_gravity="center" />
-
-    <ListView
-        android:id="@+id/customListView"
+    <!-- BottomBar from here -->
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"
-        tools:layout_editor_absoluteX="5dp" />
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="50dp"
+        android:background="@android:color/holo_purple"/>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/holo_blue_light"
+        app:layout_anchor="@id/bar"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
