--- a/app/src/main/res/layout/fragment_generator_automate.xml
+++ b/app/src/main/res/layout/fragment_generator_automate.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center" />
 
     <ListView
-        android:id="@+id/customListView"
+        android:id="@+id/generator_customListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
