--- a/app/src/main/res/layout/fragment_generator_automate.xml
+++ b/app/src/main/res/layout/fragment_generator_automate.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#F6F8FA"
     android:orientation="vertical"
-    tools:context="org.tomoaki.coursehelper.View.CoursesFragment"
+    tools:context="org.tomoaki.coursehelper.View.Fragment.CoursesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
