--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="org.tomoaki.coursehelper.View.ScheduleFragment">
+    tools:context="org.tomoaki.coursehelper.View.Fragment.ScheduleFragment">
 
     <ScrollView
         android:layout_width="match_parent"
