--- a/app/src/main/res/layout/generator_option_course_layout.xml
+++ b/app/src/main/res/layout/generator_option_course_layout.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@android:color/white">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:background="#CCffffff">
 
     <TextView
         android:id="@+id/generator_option_courseTitle"
