--- a/app/src/main/res/layout/homepage_gridcards_layout.xml
+++ b/app/src/main/res/layout/homepage_gridcards_layout.xml
@@ -4,8 +4,7 @@
     android:weightSum="10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/homepage_background">
+    android:orientation="vertical">
 
     <TextView
         android:layout_weight="1.25"
@@ -62,7 +61,7 @@
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="View Courses"
                     android:textAlignment="center"
@@ -81,6 +80,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:backgroundTint="@android:color/darker_gray"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
 
@@ -98,7 +98,7 @@
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="Setting"
                     android:textAlignment="center"
@@ -134,7 +134,7 @@
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="Generator"
                     android:textAlignment="center"
@@ -153,6 +153,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:backgroundTint="@android:color/darker_gray"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
 
@@ -166,11 +167,11 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/lego"/>
+                    android:src="@drawable/lego" />
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="Adv. Generator"
                     android:textAlignment="center"
@@ -189,6 +190,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:backgroundTint="@android:color/darker_gray"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
 
@@ -206,7 +208,7 @@
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="Rate Professor"
                     android:textAlignment="center"
@@ -242,7 +244,7 @@
                 <TextView
                     android:layout_weight="2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:text="IOS Version?"
                     android:textAlignment="center"
