Implemented RateMyProfessor Fragment with WebView

--- a/app/src/main/res/layout/fragment_generator_automate.xml
+++ b/app/src/main/res/layout/fragment_generator_automate.xml
@@ -36,10 +36,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/holo_blue_light"
+                android:background="@android:color/holo_blue_dark"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="close the distance"
+                android:text="Generate Schedules"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +51,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:background="@android:color/holo_blue_light"
+                android:background="@android:color/holo_blue_bright"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="view consideration"
