--- a/app/src/main/res/layout/generator_option_course_layout.xml
+++ b/app/src/main/res/layout/generator_option_course_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:background="#CCffffff">
+    android:background="#ffffff">
 
     <TextView
         android:id="@+id/generator_option_courseTitle"
@@ -49,7 +49,6 @@
                 android:id="@+id/generator_option_crn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="MATH-194 (442456)"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -70,7 +69,6 @@
                 android:id="@+id/generator_option_faculty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chung. G"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -93,14 +91,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CRN: "
+                android:text="Time: "
                 android:textColor="@android:color/holo_purple" />
 
             <TextView
                 android:id="@+id/generator_option_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hybrid (............)\nMWF 5:00PM - 10PM"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -114,14 +111,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="room: "
+                android:text="Room: "
                 android:textColor="@android:color/holo_purple" />
 
             <TextView
                 android:id="@+id/generator_option_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WLSON 416"
                 android:textSize="15sp"/>
         </LinearLayout>
     </LinearLayout>
